@@ -52,7 +52,7 @@ DATABASE_ROW_MAP_RAW = {
 		"装備時変更職業ＩＤ": NULL,
 		"初期スロット数": NULL,
 		"アイテムチェンジ可否フラグ": NULL,
-		"イベントＩＤ": (dbint, "eventid"),
+		"イベントＩＤ": (dbint, "event_id"),
 		"エフェクトＩＤ": NULL,
 		"発動Skill": NULL,
 		"使用可能Skill": NULL,
@@ -195,7 +195,7 @@ DATABASE_ROW_MAP_RAW = {
 		"フラグ６": NULL,
 		"フラグ７": NULL,
 		"変身ＩＤ": NULL,
-		"封印モンＩＤ": (dbint, "petid"),
+		"封印モンＩＤ": (dbint, "pet_id"),
 		"片手モーションID": (dbint, "s_motion"),
 		"両手モーションID": (dbint, "d_motion"),
 		"右手憑依者モーション": NULL,
